fixed info not showing

--- a/public/style.css
+++ b/public/style.css
@@ -30,5 +30,4 @@ option {
   margin: auto;
   padding: 10px;
   border: solid 2px black;
-  visibility: hidden;
 }
